# MUKESH-BACH-GYA

./: .gitignore  ResearchOS_Frontend.html  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js
6.1/: .env.example  Dockerfile  api.py  cli.py  pyproject.toml  requirements.txt  tests.py  utils.py
6.1/config/: .env.example  settings.py
6.1/core/: pipeline.py  runtime.py
6.1/models/: paper.py
6.1/providers/embeddings/: base.py  huggingface.py
6.1/research_discovery/: cli.py
6.1/research_discovery/config/: settings.py
6.1/research_discovery/core/: pipeline.py  runtime.py
6.1/research_discovery/providers/: factory.py
6.1/research_discovery/providers/embeddings/: base.py  huggingface.py
6.1/research_discovery/providers/llm/: base.py  huggingface.py
6.1/research_discovery/services/dedup/: engine.py
6.1/research_discovery/services/embedding/: service.py
6.1/research_discovery/services/retrieval/: arxiv.py  crossref.py  openalex.py  semantic_scholar.py
6.1/research_discovery/services/storage/: json_store.py
6.1/services/citation_graph/: expander.py
6.1/services/dedup/: engine.py
6.1/services/embedding/: service.py
6.1/services/query_expansion/: agent.py
6.1/services/ranking/: engine.py
6.1/services/retrieval/: arvix.py  crossref.py  openalex.py  semantic_scholar.py
6.1/services/storage/: json_store.py
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  config.py  main.py  orchestrator.py  requirements.txt  run.py  start.sh  supervisord.conf  worker.py
backend/agents/: generation.py  knowledge.py  research.py  review.py  supervisor.py  writing.py
backend/alembic/: env.py
backend/api/: dependencies.py  routes.py  websocket.py
backend/core/: database.py  document.py  embeddings.py  graph.py  llm.py  logging.py  rag.py
backend/models/: db.py  schemas.py
backend/prompts/: templates.py
backend/services/: citation_api.py  export.py  paper_api.py
backend/tests/: conftest.py  test_agents.py  test_api.py  test_db.py  test_integration.py  test_paper_api.py
document-intelligence-engine/: env.example  requirements.txt  requirements_rag.txt
document-intelligence-engine/data/output/: 14e9b8d1-86db-4edd-a265-c85887073324.json
document-intelligence-engine/docker/: docker-compose.yml
document-intelligence-engine/src/: orchestrator.py
document-intelligence-engine/src/chunkers/: semantic_chunker.py
document-intelligence-engine/src/extractors/: equation_extractor.py  figure_extractor.py  table_extractor.py
document-intelligence-engine/src/parsers/: grobid_client.py  ocr_fallback.py
document-intelligence-engine/src/rag/: rag_pipeline.py
document-intelligence-engine/src/rag/compression/: context_compressor.py
document-intelligence-engine/src/rag/embedders/: code_embedder.py  qdrant_store.py  text_embedder.py  vision_embedder.py
document-intelligence-engine/src/rag/fusion/: rrf_fuser.py
document-intelligence-engine/src/rag/intent/: query_analyzer.py
document-intelligence-engine/src/rag/rerankers/: bge_reranker.py
document-intelligence-engine/src/rag/retrievers/: citation_graph.py  hybrid_retriever.py
document-intelligence-engine/tests/: test_extractors.py  test_infra.py  test_orchestrator.py  test_parsers.py  test_rag.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/components/left/: BrandHeader.jsx  ChatHistory.jsx  LeftPanel.jsx  PromptInputBlock.jsx
frontend/src/components/right/: HumanReviewBanner.jsx  PapersPanel.jsx  PipelineStepper.jsx  ReviewerCards.jsx  RightPanel.jsx  TelemetryBar.jsx
frontend/src/components/shared/: GlobalSidebar.jsx
frontend/src/context/: AppContext.jsx
frontend/src/hooks/: useResize.js
frontend/src/routes/: Dashboard.tsx  Discovery.tsx  Documents.tsx  DraftEditor.tsx  KnowledgeGraph.tsx  RagConsole.tsx  ReviewSimulator.tsx
src/: index.css
src/components/shared/: GlobalSidebar.jsx  Modal.jsx  StatusPill.jsx
src/hooks/: useProject.js  useResize.js
