[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "research-discovery"
version = "1.0.0"
description = "Academic paper discovery via retrieval + ranking + citation graph expansion"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # API & async
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "aiofiles>=23.0.0",

    # Deduplication
    "rapidfuzz>=3.6.0",

    # Embeddings (optional — falls back to TF-IDF)
    "sentence-transformers>=2.7.0",

    # NLP / ML
    "numpy>=1.26.0",
]

[project.optional-dependencies]
full = [
    # Vector database
    "qdrant-client>=1.9.0",
    # Relational DB
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    # Task queue
    "celery>=5.3.0",
    "redis>=5.0.0",
    # Clustering (topic analysis)
    "umap-learn>=0.5.0",
    "hdbscan>=0.8.0",
    # Reranker
    "FlagEmbedding>=1.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
research-discover = "research_discovery.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["research_discovery*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]