[build-system]
requires = [
    "setuptools>=69",
    "wheel",
]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Project Metadata
# ---------------------------------------------------------------------------

[project]
name = "research-discovery"

version = "1.0.0"

description = "Modular academic retrieval and ranking platform"

readme = "README.md"

requires-python = ">=3.10"

license = { text = "MIT" }

authors = [
    { name = "Research Discovery Team" }
]

keywords = [
    "retrieval",
    "rag",
    "academic-search",
    "ranking",
    "embeddings",
    "citation-graph",
    "llm",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Framework :: FastAPI",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
]

# ---------------------------------------------------------------------------
# Core Runtime Dependencies
# ---------------------------------------------------------------------------

dependencies = [

    # FastAPI runtime
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",

    # Async networking
    "httpx>=0.27,<1.0",
    "aiofiles>=23,<24",

    # Validation / settings
    "pydantic>=2.6,<3.0",
    "python-dotenv>=1.0,<2.0",

    # Reliability
    "tenacity>=8.2,<9.0",

    # Deduplication
    "rapidfuzz>=3.6,<4.0",

    # Numerical runtime
    "numpy>=1.26,<3.0",
]

# ---------------------------------------------------------------------------
# Optional Dependency Groups
# ---------------------------------------------------------------------------

[project.optional-dependencies]

# ---------------------------------------------------
# Local Embeddings / CPU Inference
# ---------------------------------------------------

embeddings = [

    "sentence-transformers>=2.7,<3.0",
]

# ---------------------------------------------------
# HuggingFace Remote Inference
# ---------------------------------------------------

huggingface = [

    "huggingface-hub>=0.22,<1.0",
]

# ---------------------------------------------------
# OpenAI-compatible Providers
# ---------------------------------------------------

openai = [

    "openai>=1.23,<2.0",
]

# ---------------------------------------------------
# GPU / Advanced Retrieval
# ---------------------------------------------------

gpu = [

    "FlagEmbedding>=1.2,<2.0",
]

# ---------------------------------------------------
# Vector Databases
# ---------------------------------------------------

vector-db = [

    "qdrant-client>=1.9,<2.0",
]

# ---------------------------------------------------
# SQL Persistence
# ---------------------------------------------------

sql = [

    "sqlalchemy>=2.0,<3.0",
    "psycopg2-binary>=2.9,<3.0",
]

# ---------------------------------------------------
# Worker Runtime
# ---------------------------------------------------

workers = [

    "celery>=5.3,<6.0",
    "redis>=5.0,<6.0",
]

# ---------------------------------------------------
# Research / Analytics
# ---------------------------------------------------

analytics = [

    "umap-learn>=0.5,<1.0",
    "hdbscan>=0.8,<1.0",
]

# ---------------------------------------------------
# Observability
# ---------------------------------------------------

observability = [

    "structlog>=24.1,<25.0",
    "prometheus-client>=0.20,<1.0",
]

# ---------------------------------------------------
# Development Runtime
# ---------------------------------------------------

dev = [

    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=4.1,<5.0",

    "black>=24.0,<25.0",
    "ruff>=0.3,<1.0",

    "mypy>=1.9,<2.0",
    "pre-commit>=3.7,<4.0",
]

# ---------------------------------------------------
# Full Platform Install
# ---------------------------------------------------

full = [

    "research-discovery[embeddings]",
    "research-discovery[huggingface]",
    "research-discovery[openai]",
    "research-discovery[gpu]",
    "research-discovery[vector-db]",
    "research-discovery[sql]",
    "research-discovery[workers]",
    "research-discovery[analytics]",
    "research-discovery[observability]",
]

# ---------------------------------------------------------------------------
# CLI Entrypoints
# ---------------------------------------------------------------------------

[project.scripts]

research-discover = "research_discovery.cli:cli"

# ---------------------------------------------------------------------------
# Package Discovery
# ---------------------------------------------------------------------------

[tool.setuptools.packages.find]

where = ["."]
include = [
    "research_discovery*"
]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]

asyncio_mode = "auto"

testpaths = [
    "tests"
]

addopts = [
    "--strict-markers",
    "--disable-warnings",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]

line-length = 100

target-version = "py310"

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------

[tool.black]

line-length = 100

target-version = [
    "py310"
]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------

[tool.mypy]

python_version = "3.10"

warn_return_any = true

warn_unused_configs = true

disallow_untyped_defs = true

ignore_missing_imports = true
